<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">cara_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_credit_check_pe">Credit check pending</string>
  <string name="msg_inquiry_about_y">Inquiry about your listing</string>
  <string name="lbl_5000_month">$5000/month</string>
  <string name="lbl_reviews">Reviews</string>
  <string name="lbl_rent_now">Rent Now</string>
  <string name="lbl_amount_50">Amount: $50</string>
  <string name="msg_available_for_c">Available for Chat</string>
  <string name="lbl4">&#128100;</string>
  <string name="lbl5">&#128515;</string>
  <string name="lbl2">&#128101;</string>
  <string name="lbl3">&#128269;</string>
  <string name="lbl_phone">Phone</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_admin_dashboard">Admin Dashboard</string>
  <string name="msg_regarding_your">Regarding your booking</string>
  <string name="lbl_add_user">Add User</string>
  <string name="msg_good_credit_his">Good credit history</string>
  <string name="lbl_responses">Responses</string>
  <string name="lbl_olivia_thompson">Olivia Thompson</string>
  <string name="lbl_nearby">Nearby</string>
  <string name="msg_recommended_ren">Recommended Rentals</string>
  <string name="lbl_payment_2">Payment #2</string>
  <string name="lbl_amount_100">Amount: $100</string>
  <string name="lbl_1d_ago">1d ago</string>
  <string name="lbl_renters">Renters</string>
  <string name="lbl_house_rentals">House Rentals</string>
  <string name="lbl_profile_details">Profile Details</string>
  <string name="msg_john_doe_exampl">john.doe@example.com</string>
  <string name="lbl_payment_1">Payment #1</string>
  <string name="lbl_image_5">Image 5</string>
  <string name="lbl_image_6">Image 6</string>
  <string name="lbl_image_1">Image 1</string>
  <string name="lbl_review_3">Review 3</string>
  <string name="lbl_image_2">Image 2</string>
  <string name="lbl_review_2">Review 2</string>
  <string name="lbl_apartment">Apartment</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_image_3">Image 3</string>
  <string name="lbl_image_4">Image 4</string>
  <string name="msg_very_responsive">Very responsive landlord. Highly recommend.</string>
  <string name="lbl_review_1">Review 1</string>
  <string name="msg_joined_2021_02">Joined: 2021-02-15</string>
  <string name="lbl_data_6">Data 6</string>
  <string name="lbl_data_4">Data 4</string>
  <string name="lbl_data_5">Data 5</string>
  <string name="msg_joined_2021_01">Joined: 2021-01-01</string>
  <string name="lbl_data_2">Data 2</string>
  <string name="lbl_data_3">Data 3</string>
  <string name="lbl_data_1">Data 1</string>
  <string name="lbl_refund_deposit">Refund Deposit</string>
  <string name="lbl_james_rodriguez">James Rodriguez</string>
  <string name="lbl_add_new_rental">Add New Rental</string>
  <string name="lbl_3d_ago">3d ago</string>
  <string name="lbl_rental_chat">Rental Chat</string>
  <string name="msg_recent_conversa">Recent Conversations</string>
  <string name="msg_cozy_studio_apa">Cozy Studio Apartment</string>
  <string name="lbl_rental_app">Rental App</string>
  <string name="lbl_view_all">View All</string>
  <string name="lbl_sent">Sent</string>
  <string name="msg_landlord_dashbo">Landlord Dashboard</string>
  <string name="msg_johndoe_gmail_c">johndoe@gmail.com</string>
  <string name="msg_feedback_on_you">Feedback on your service</string>
  <string name="lbl_lakeview_villa">Lakeview Villa</string>
  <string name="lbl_find_tenants">Find Tenants</string>
  <string name="msg_add_payment_met">Add Payment Method</string>
  <string name="lbl_samuel_wilson">Samuel Wilson</string>
  <string name="lbl_1_123_456_7890">+1 123-456-7890</string>
  <string name="lbl_house">House</string>
  <string name="lbl_adam_smith">Adam Smith</string>
  <string name="lbl_rentals">Rentals</string>
  <string name="msg_visa_ending_in">Visa ending in 1234</string>
  <string name="lbl8">&#128274;</string>
  <string name="lbl9">➕</string>
  <string name="lbl6">&#127757;</string>
  <string name="lbl7">&#128203;</string>
  <string name="msg_3_bedrooms_15">3 bedrooms, $1500/month</string>
  <string name="lbl10">&#128179;</string>
  <string name="msg_25th_august_202">25th August 2021</string>
  <string name="lbl11">&#127974;</string>
  <string name="lbl_send_receipt">Send Receipt</string>
  <string name="lbl12">&#128181;</string>
  <string name="lbl13">&#128229;</string>
  <string name="lbl_find_rentals">Find Rentals</string>
  <string name="lbl14">&#128228;</string>
  <string name="lbl15">&#128233;</string>
  <string name="lbl16">&#128218;</string>
  <string name="lbl17">&#128172;</string>
  <string name="lbl_2000_month">$2000/month</string>
  <string name="lbl_start_chat">Start Chat</string>
  <string name="msg_interested_in_b">Interested in booking your car</string>
  <string name="msg_2_bedrooms_12">2 bedrooms, $1200/month</string>
  <string name="lbl_credit_report">Credit Report</string>
  <string name="lbl_chat">Chat</string>
  <string name="msg_displaying_near">Displaying Nearby Rentals</string>
  <string name="lbl_4h_ago">4h ago</string>
  <string name="lbl_applications">Applications</string>
  <string name="lbl_user_3">User 3</string>
  <string name="msg_change_payment">Change Payment Method</string>
  <string name="lbl_alex_johnson">Alex Johnson</string>
  <string name="lbl_remove_payment">Remove Payment</string>
  <string name="msg_southside_heigh">Southside Heights</string>
  <string name="lbl_compose">Compose</string>
  <string name="msg_an_image_of_a_h">An image of a house</string>
  <string name="lbl_1w_ago">1w ago</string>
  <string name="lbl_user_1">User 1</string>
  <string name="lbl_user_2">User 2</string>
  <string name="lbl_name">Name</string>
  <string name="lbl_remove_user">Remove User</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl">&#127968;</string>
  <string name="lbl_view_profile">View Profile</string>
  <string name="msg_luxury_penthous">Luxury Penthouse</string>
  <string name="lbl_deposit">Deposit</string>
  <string name="lbl_2h_ago">2h ago</string>
  <string name="lbl_emily_johnson">Emily Johnson</string>
  <string name="lbl_my_rentals">My Rentals</string>
  <string name="lbl_jane_smith">Jane Smith</string>
  <string name="msg_chat_with_rente">Chat with Renters</string>
  <string name="msg_available_renta">Available Rentals</string>
  <string name="lbl_email">Email</string>
  <string name="msg_credit_check_re">Credit Check Reports</string>
  <string name="msg_janesmith_gmail">janesmith@gmail.com</string>
  <string name="lbl_listings">Listings</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_bookings">Bookings</string>
  <string name="lbl_process_payment">Process Payment</string>
  <string name="lbl_product_3">Product 3</string>
  <string name="lbl_product_4">Product 4</string>
  <string name="lbl_product_1">Product 1</string>
  <string name="lbl_users">Users</string>
  <string name="lbl_product_2">Product 2</string>
  <string name="msg_order_credit_re">Order Credit Report</string>
  <string name="lbl_john_doe">John Doe</string>
  <string name="lbl_product_5">Product 5</string>
  <string name="lbl_payment_method">Payment Method</string>
  <string name="lbl_product_6">Product 6</string>
  <string name="msg_credit_check_ap">Credit check approved</string>
  <string name="lbl_sophia_davis">Sophia Davis</string>
  <string name="lbl_payments">Payments</string>
  <string name="msg_question_about">Question about the rental agreement</string>
  <string name="lbl_payment_profile">Payment Profile</string>
  <string name="lbl_1000_month">$1000/month</string>
  <string name="msg_spacious_3_bedr">Spacious 3 Bedroom House</string>
  <string name="msg_the_house_had_s">The house had some maintenance issues, but overall a good deal.</string>
  <string name="msg_excellent_credi">Excellent credit history</string>
  <string name="msg_24th_august_202">24th August 2021</string>
  <string name="lbl_1000">$1000</string>
  <string name="lbl_inbox">Inbox</string>
  <string name="lbl_5d_ago">5d ago</string>
  <string name="msg_need_assistance">Need assistance with checkout</string>
  <string name="lbl_message_user">Message User</string>
  <string name="msg_great_experienc">Great experience! The house was exactly as described.</string>
</resources>
