<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listframeThreeRowModel" type="com.carasapplication.app.modules.landlorddashboard.data.model.ListframeThreeRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowframeThree"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end"
            android:id="@+id/txtFrameThree"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5pxv"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_3pxv"
            android:paddingStart="@dimen/_4pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listframeThreeRowModel.txtFrameThree}"
            style="@style/txtSolidRounded_1" tools:text="@string/lbl4"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntitle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_weight="0.65" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTitleFive"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listframeThreeRowModel.txtTitleFive}"
                style="@style/txtRobotoregular14" tools:text="@string/lbl_john_doe"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSubtitle"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listframeThreeRowModel.txtSubtitle}"
                style="@style/txtRobotoregular12_1" tools:text="@string/msg_25th_august_202"/>
        </LinearLayout>
        <TextView android:id="@+id/txtSubtitleOne"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_weight="0.25" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:text="@{listframeThreeRowModel.txtSubtitleOne}"
            style="@style/txtRobotomedium14" tools:text="@string/msg_credit_check_ap"/>
    </LinearLayout>
</layout>
