<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listframeTwoRowModel" type="com.carasapplication.app.modules.admindashboard.data.model.ListframeTwoRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowframeTwo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtFrameTwo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_3pxv"
            android:paddingStart="@dimen/_4pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listframeTwoRowModel.txtFrameTwo}"
            style="@style/txtSolidRounded_1" tools:text="@string/lbl12"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntitle"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.65" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTitleSeven"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listframeTwoRowModel.txtTitleSeven}"
                style="@style/txtRobotoregular14" tools:text="@string/lbl_payment_1"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSubtitleTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listframeTwoRowModel.txtSubtitleTwo}"
                style="@style/txtRobotoregular12_1" tools:text="@string/lbl_john_doe"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtPrice"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8pxv"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_weight="0.25" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{listframeTwoRowModel.txtPrice}"
            style="@style/txtRobotomedium14" tools:text="@string/lbl_amount_50"/>
    </LinearLayout>
</layout>
