<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listframeRowModel" type="com.carasapplication.app.modules.renterdashboard.data.model.ListframeRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowframe"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtFrame"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.39" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_3pxv"
            android:paddingStart="@dimen/_4pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{listframeRowModel.txtFrame}"
            style="@style/txtSolidRounded_1" tools:text="@string/lbl5"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntitle"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_weight="0.61" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTitleTwelve"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listframeRowModel.txtTitleTwelve}"
                style="@style/txtRobotoregular14" tools:text="@string/lbl_name"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSubtitleOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listframeRowModel.txtSubtitleOne}"
                style="@style/txtRobotoregular12_1" tools:text="@string/lbl_john_doe"/>
        </LinearLayout>
    </LinearLayout>
</layout>
