<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="rowModel" type="com.carasapplication.app.modules.rentallistings.data.model.RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearCard"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical" style="@style/groupStylecornerRadius">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearImage"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyleblack_900_0c">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtTitleFour"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_66pxv"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_68pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{rowModel.txtTitleFour}"
                style="@style/txtRobotoregular12" tools:text="@string/msg_an_image_of_a_h"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtTitleOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{rowModel.txtTitleOne}"
            style="@style/txtRobotoregular12" tools:text="@string/msg_cozy_studio_apa"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtPrice"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_27pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{rowModel.txtPrice}"
            style="@style/txtRobotomedium16" tools:text="@string/lbl_1000_month"/>
    </LinearLayout>
</layout>
