<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="chatRowModel" type="com.carasapplication.app.modules.chat.data.model.ChatRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearAvatar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <View
            android:background="@drawable/rectangle_bg_black_900_19_radius_20"
            android:id="@+id/viewAvatar"
            android:layout_height="@dimen/_40pxh" android:layout_width="@dimen/_40pxh"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntitle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.58" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTitleFive"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{chatRowModel.txtTitleFive}"
                style="@style/txtRobotomedium16" tools:text="@string/lbl_john_doe"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSubtitle"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{chatRowModel.txtSubtitle}"
                style="@style/txtRobotoregular12_1" tools:text="@string/msg_available_for_c"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearButton"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_weight="0.29" android:layout_width="0dp"
            android:orientation="horizontal" style="@style/groupStylecornerRadius_2">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTitleOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_weight="0.93" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{chatRowModel.txtTitleOne}"
                style="@style/txtRobotoregular12" tools:text="@string/lbl_view_profile"/>
            <ImageView android:id="@+id/imageArrowright"
                android:layout_height="@dimen/_10pxh"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="@dimen/_5pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowright"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
        </LinearLayout>
    </LinearLayout>
</layout>
